--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ DB_PASSWORD=postgres
 POSTGRES_PASSWORD=postgres
 DB_HOST=db
 DB_PORT=5432
+DATABASE_URL=psql://postgres:postgres@127.0.0.1:5432/postgres
